scroll-margin to avoid scrolling behind sticky header + sticky behaviour improved on mobile

--- a/assets/css/scss/_layout.scss
+++ b/assets/css/scss/_layout.scss
@@ -1,9 +1,21 @@
+:root {
+  --scroll-offset: 6.4rem;
+}
+
+[id] {
+  scroll-margin-top: var(--scroll-offset);
+}
+
 header, .article-title {
   position: fixed;
+  padding: 2rem 1rem;
+  @media (max-width: 693px) {
+    position: static;
+    padding: 0 0 2rem 0;
+  }
   z-index: 2;
 
   inset: 0 0 auto 0;
-  padding: 2rem 1rem;
 
   background: var(--color-page);
   box-shadow: 0 0 1.5rem -.5rem var(--color-page);
@@ -16,6 +28,10 @@ footer {
 .article-title {
   inset: 11.5rem 1rem auto 1rem;
   padding: 0;
+  @media (max-width: 693px) {
+    position: sticky;
+    inset: 1rem 1rem;
+  }
   z-index: -1;
 
   h1, time {
@@ -79,6 +95,9 @@ main {
 
 .article-layout {
   margin: 23rem auto 5rem auto;
+  @media (max-width: 693px) {
+    margin: 5rem auto 5rem auto;
+  }
   border-radius: 1rem;
   min-height: calc(100vh - 34rem);
   background: var(--color-main);
@@ -142,7 +161,7 @@ main {
     position: static;
   }
   z-index: 1;
-  top: 6.4rem;
+  top: var(--scroll-offset);
 
   ol, ul {
     padding-left: 2em;
